// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding a memory with placeholder/default values 1`] = `
<View
  collapsable={false}
  forwardedRef={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    forwardedRef={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    pointerEvents="auto"
    style={
      Object {
        "transform": Array [
          Object {
            "translateX": -0,
          },
        ],
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#252422",
              "flexDirection": "column",
              "height": 120,
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "marginLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#252422",
                      "fontFamily": "Avenir-Roman",
                      "fontSize": 16,
                      "fontWeight": "bold",
                    },
                    Object {
                      "color": "#EB5E28",
                      "fontSize": 16,
                      "marginTop": 15,
                      "padding": 2,
                    },
                  ]
                }
              >
                --
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "width": "20%",
                }
              }
            >
              <Text />
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#252422",
                  "fontFamily": "Avenir-Roman",
                  "fontSize": 16,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#CCC5B9",
                  "fontSize": 12,
                  "padding": 2,
                },
              ]
            }
          >
            21-5-2022
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#252422",
                  "fontFamily": "Avenir-Roman",
                  "fontSize": 16,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#CCC5B9",
                  "fontSize": 14,
                  "marginTop": 2,
                  "padding": 2,
                  "width": "75%",
                },
              ]
            }
          >
            --
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Adding a memory with valid user inputs 1`] = `
<View
  collapsable={false}
  forwardedRef={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    forwardedRef={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    pointerEvents="auto"
    style={
      Object {
        "transform": Array [
          Object {
            "translateX": -0,
          },
        ],
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#252422",
              "flexDirection": "column",
              "height": 120,
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "marginLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "80%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#252422",
                      "fontFamily": "Avenir-Roman",
                      "fontSize": 16,
                      "fontWeight": "bold",
                    },
                    Object {
                      "color": "#EB5E28",
                      "fontSize": 16,
                      "marginTop": 15,
                      "padding": 2,
                    },
                  ]
                }
              >
                Taco Tuesday
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-end",
                  "justifyContent": "center",
                  "width": "20%",
                }
              }
            >
              <Text />
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#252422",
                  "fontFamily": "Avenir-Roman",
                  "fontSize": 16,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#CCC5B9",
                  "fontSize": 12,
                  "padding": 2,
                },
              ]
            }
          >
            21-5-2022
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#252422",
                  "fontFamily": "Avenir-Roman",
                  "fontSize": 16,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#CCC5B9",
                  "fontSize": 14,
                  "marginTop": 2,
                  "padding": 2,
                  "width": "75%",
                },
              ]
            }
          >
            Tacos on Tuesday
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Display all user inputs required for user to login 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "alignContent": "center",
        "display": "flex",
        "flex": 1,
        "marginTop": 0,
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFCF2",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 60,
          "marginTop": 100,
        },
        Object {
          "marginTop": -150,
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 120,
          "width": 120,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#252422",
            "fontFamily": "Avenir-Roman",
            "fontSize": 16,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 20,
            "fontWeight": "900",
          },
        ]
      }
    >
      MyMems
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#252422",
          "flexDirection": "row",
          "height": 50,
          "marginVertical": 5,
          "width": 250,
        },
        Object {
          "width": "80%",
        },
      ]
    }
  >
    <Text />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      id="userEmail"
      maxLength={35}
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#CCC5B9"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#CCC5B9",
          "fontFamily": "Avenir Next",
          "fontSize": 18,
          "width": "80%",
        }
      }
      testID="loginEmail"
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#252422",
          "flexDirection": "row",
          "height": 50,
          "marginVertical": 5,
          "width": 250,
        },
        Object {
          "width": "80%",
        },
      ]
    }
  >
    <Text />
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      maxLength={35}
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#CCC5B9"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "color": "#CCC5B9",
          "fontFamily": "Avenir Next",
          "fontSize": 18,
          "width": "80%",
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#EB5E28",
        "borderRadius": 50,
        "elevation": 6,
        "marginTop": 30,
        "opacity": 1,
        "padding": 10,
        "shadowColor": "rgba(0, 0, 0, 0.3)",
        "shadowOffset": Object {
          "height": 5,
          "width": 1,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 5,
        "width": 180,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#252422",
              "fontFamily": "Avenir-Roman",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "color": undefined,
              "fontSize": undefined,
            },
          ]
        }
      >
        Login
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EB5E28",
        "borderRadius": 50,
        "elevation": 6,
        "left": 10,
        "opacity": 1,
        "padding": 10,
        "position": "absolute",
        "shadowColor": "rgba(0, 0, 0, 0.3)",
        "shadowOffset": Object {
          "height": 5,
          "width": 1,
        },
        "shadowOpacity": 0.8,
        "shadowRadius": 5,
        "top": 50,
        "width": 80,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#252422",
              "fontFamily": "Avenir-Roman",
              "fontSize": 16,
              "fontWeight": "bold",
            },
            Object {
              "color": undefined,
              "fontSize": undefined,
            },
          ]
        }
      >
        Back
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
